--- a/DemoMVC/MvcMovie/Views/person/Create.cshtml
+++ b/DemoMVC/MvcMovie/Views/person/Create.cshtml
@@ -6,8 +6,18 @@
 
 <h1>Create</h1>
 
-<h3>Person</h3>
-<hr />
+<h4>Person</h4>
+
+<hr>
+<form asp-action="Upload" ectype="multipart/form-data">
+    <div class="row form-control">
+        <label class="col-sm-2">Import data from Excel: </label>
+        <input type="file" name="file" class="col-sm-4">
+        <input type="submit" value="Upload" class="btn btn-primary col-sm-1">
+    </div>
+</form>
+
+<hr/>
 
 <div class="row">
     <div class="col-md-4">
