--- a/DemoMVC/MvcMovie/Views/person/Index.cshtml
+++ b/DemoMVC/MvcMovie/Views/person/Index.cshtml
@@ -8,6 +8,8 @@
 
 <p>
     <a asp-action="Create">Create New</a>
+    <a class="btn btn-success" asp-action="Download">Download</a>
+
 </p>
 <table class="table">
     <thead>
